Fixed ugliness for threads that had no thread actions on small screens.

--- a/ISS/static-src/src/thread-index/thread-index.less
+++ b/ISS/static-src/src/thread-index/thread-index.less
@@ -104,7 +104,7 @@
           }
         }
 
-        ul.mobile-thread-controls {
+        ul.mobile-thread-controls:not(:empty) {
           .flex-stretch();
           list-style: none;
           margin: 0;
